<resources>
    <string name="app_name">KSO</string>

    <string name="departure">De %1$s le %2$s à %3$s</string>
    <string name="arrival">À %1$s le %2$s à %3$s</string>
    <string name="duration">%1$s \nmin</string>
    <string name="duration_inline">%1$s min</string>
    <string name="error_message">Un erreur est servenue, veuillez réessayer a nouveau !</string>


    <string name="departure_title">Départ</string>
    <string name="arrival_title">Arrivée</string>
    <string name="detail_title">Détails</string>
    <string name="duration_title">Durée</string>
    <string name="distance">Distance</string>
    <string name="co_2">CO2</string>

    <string name="departure_value">Le %1$s à %2$s</string>


</resources>